# vision_msgs

./: CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  README  README.md  Readme.md  mainpage.dox  package.xml  setup.py
include/vision_msgs/: create_aabb.h  create_aabb.hpp
msg/: BoundingBox.msg  BoundingBox2D.msg  BoundingBox2DArray.msg  BoundingBox3D.msg  BoundingBox3DArray.msg  BoundingRect.msg  CategoryDistribution.msg  Classification.msg  Classification2D.msg  Classification3D.msg  Classification3d.msg  ClassifierInfo.msg  CompressedDetection2D.msg  CompressedDetection2DArray.msg  Detection2D.msg  Detection2DArray.msg  Detection2DList.msg  Detection2DWithCompression.msg  Detection2DWithCompressionArray.msg  Detection2d.msg  Detection2dArray.msg  Detection3D.msg  Detection3DArray.msg  Detection3DList.msg  Detection3d.msg  Detection3dArray.msg  InferenceInfo.msg  LabelInfo.msg  ObjectHypothesis.msg  ObjectHypothesis2D.msg  ObjectHypothesisWithPose.msg  PixelSegmentation.msg  Point2D.msg  Pose2D.msg  SemanticClass.msg  SemanticSegmentation.msg  VisionClass.msg  VisionInfo.msg
test/: CMakeLists.txt  main.cpp
vision_msgs/: .gitignore  CHANGELOG.rst  CMakeLists.txt  package.xml
vision_msgs/include/vision_msgs/: create_aabb.hpp
vision_msgs/msg/: BoundingBox2D.msg  BoundingBox3D.msg  Classification.msg  Classification3D.msg  Detection2D.msg  Detection2DArray.msg  Detection3D.msg  Detection3DArray.msg  ObjectHypothesis.msg
vision_msgs/test/: main.cpp
vision_msgs_meta/: CMakeLists.txt  package.xml
vision_msgs_rviz/: CMakeLists.txt  package.xml  plugin_description.xml
vision_msgs_rviz/include/vision_msgs_rviz/: bounding_box_array_display.h  bounding_box_visual.h  detection_3d_array_display.h  detection_3d_visual.h
vision_msgs_rviz/src/: bounding_box_array_display.cpp  bounding_box_visual.cpp  detection_3d_array_display.cpp  detection_3d_visual.cpp
vision_msgs_rviz/test/: detection3Darray.yaml  publish.sh  rviz.rviz
vision_msgs_rviz_plugins/: CMakeLists.txt  README.md  package.xml  plugins_description.xml
vision_msgs_rviz_plugins/conf/: conf.rviz  example.yaml
vision_msgs_rviz_plugins/include/vision_msgs_rviz_plugins/: bounding_box_3d.hpp  bounding_box_3d_array.hpp  bounding_box_3d_common.hpp  detection_3d.hpp  detection_3d_array.hpp  detection_3d_common.hpp  visibility_control.hpp
vision_msgs_rviz_plugins/launch/: test_all.launch.py
vision_msgs_rviz_plugins/samples/: BoundingBox3D.py  BoundingBox3DArray.py  Detection3D.py  Detection3DArray.py
vision_msgs_rviz_plugins/src/: bounding_box_3d.cpp  bounding_box_3d_array.cpp  detection_3d.cpp  detection_3d_array.cpp
