<?xml version="1.0"?>
<package format="2">
  <name>vision_msgs</name>
  <version>1.0.0</version>
  <description>
    Messages for interfacing with various computer vision pipelines, such as
    object detectors.
  </description>

  <maintainer email="adam.d.allevato@gmail.com">Adam Allevato</maintainer>
  <license>BSD</license>
  <author email="adam.d.allevato@gmail.com">Adam Allevato</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <export></export>
</package>
