<?xml version="1.0"?>
<package format="2">
  <name>vision_msgs</name>
  <version>1.0.0</version>
  <description>
    Messages for interfacing with various computer vision pipelines, such as
    object detectors.
  </description>

  <author email="adam.d.allevato@gmail.com">Adam Allevato</author>
  <maintainer email="adam.d.allevato@gmail.com">Adam Allevato</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export><build_type>ament_cmake</build_type></export>
</package>
