<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision_msgs_meta</name>
  <version>4.0.0</version>
  <description>
    Meta package for vision_msgs and vision_msgs_rviz_plugins
  </description>
  <maintainer email="adam.d.allevato@gmail.com">Adam Allevato</maintainer>

  <license>Apache License 2.0</license>

  <author email="adam.d.allevato@gmail.com">Adam Allevato</author>
  <maintainer email="adam.d.allevato@gmail.com">Adam Allevato</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>vision_msgs_rviz_plugins</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
